--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 	<body>
 		<script src="index.js" async></script>
 		<input type="file">
+		<button type="button" onclick='setBackgroundImage()'>Display</button>
 	</body>
 </html>
+
